--- a/6-React-Projects/Calculator/src/App.module.css
+++ b/6-React-Projects/Calculator/src/App.module.css
@@ -1,7 +1,21 @@
+* {
+    background-color: rgb(180, 238, 238);
+}
+
+
 .calculator {
-    border: 1px solid rgb(116, 110, 110);
-    width : 200px;
-    border-radius: 5px;
+    border: 4px solid rgb(95, 92, 92);
+    width: 400px;
+    height : 500px;
+    border-radius: 8px;
+    background-color: rgb(48, 161, 165);
+    padding: 20px; 
+    box-shadow: 0 -3em 3em rgba(155, 177, 155, 0.3),
+    0 0 0 2px white,
+    0.3em 0.3em 1em rgba(55, 62, 63, 0.6); 
+    margin: 0 auto; 
+    margin-top: 27px;
+    text-align: center;
 }
 
 
