--- a/6-React-Projects/Calculator/src/components/Display.module.css
+++ b/6-React-Projects/Calculator/src/components/Display.module.css
@@ -1,6 +1,11 @@
 #display {
-    margin : 10px;
-    width: 175px;
+    margin : 5px;
+    margin-left: 0px;
+    padding: 5px;
+    height : 100px;
+    width: 385px;
     font-size: 45px;
+    border : 2px solid ;
     border-radius: 5px;
+    background-color:rgb(217, 233, 247);
 }
